--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,4 @@ jobs:
         with:
           artifacts: "dist/*"
           bodyFile: "release.md"
+          tag: 'rel_${{ github.workflow_sha }}'
