try to actually tag things, jeez joseph

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,4 +18,5 @@ jobs:
         with:
           artifacts: "dist/*"
           bodyFile: "release.md"
-          tag: 'rel_${{ github.workflow_sha }}'
+          commit: '${{ github.sha }}'
+          tag: 'rel_${{ github.sha }}'
