--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    needs: ["tag"]
     steps:
       - uses: actions/checkout@v4
       - name: "Compile"
